# GPU_algebra

./: .gitignore  README.md
code/: CMakeLists.txt
code/demos/: CMakeLists.txt  deviceProps.cu  vecUtils.h  vectorAdd.cu
code/src/gvec/: CMakeLists.txt  gvec.cu  utils.h  vec.cu  vec.h
code/tests/gvec/: CMakeLists.txt  main.cpp  vecTests.cpp
src/: CMakeLists.txt
src/demos/: README.md
